--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,3 +17,4 @@ jobs:
       - uses: hao1305430263/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKA_README }}
+          SHOW_TITLE: true
